# byrdocs-WikiCrawler

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: build-and-run-traversal.yaml  build.yaml  ci.yml  daily-update.yaml
include/: page.hpp  wikibot.hpp
lib/: libpage.cpp  libwikibot.cpp
src/: traversal.cpp
test/: fetch_json.cpp  get.cpp  metadata.cpp  query_main_page.cpp  raw.cpp  view.cpp
