cmake_minimum_required(VERSION 3.22)
project(byrdocs_wiki_bot VERSION 0.1)
enable_testing()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE HeaderFileList "include/*")
file(GLOB_RECURSE LibraryFileList "lib/*")
include_directories(HeaderFileList /usr/include /usr/local/include)
link_directories(LibraryFileList /usr/lib /usr/local/lib)
add_library(wikibot ${HeaderFileList} ${LibraryFileList})
target_include_directories(wikibot PUBLIC include)
find_package(curlpp NAMES curlpp curl REQUIRED)
add_executable(.view test/view.cpp)
target_link_libraries(.view curlpp curl wikibot)
add_test(NAME view COMMAND .view)
