cmake_minimum_required(VERSION 3.22)
project(byrdocs_wiki_bot VERSION 0.1)
set(CMAKE_CXX_FLAGS "-Wall -Wextra")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-O3")
enable_testing()
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
file(GLOB_RECURSE HeaderFileList "include/*")
file(GLOB_RECURSE LibraryFileList "lib/*")
include_directories(include /usr/include /usr/local/include)
link_directories(lib /usr/lib /usr/local/lib)
add_library(wikibot ${HeaderFileList} ${LibraryFileList})
find_package(curlpp NAMES curlpp curl)
find_package(nlohmann_json 3.11.3 REQUIRED)
target_link_libraries(wikibot PUBLIC nlohmann_json::nlohmann_json curlpp curl)
add_executable(.view test/view.cpp)
target_link_libraries(.view wikibot)
add_test(NAME view COMMAND .view)
add_executable(.fetch_json test/fetch_json.cpp)
target_link_libraries(.fetch_json wikibot)
add_test(NAME fetch_json COMMAND .fetch_json)
add_executable(traversal src/traversal.cpp)
target_link_libraries(traversal wikibot)
